test/cli/test-generating-policy/missing-metadata-uid/resource-no-uid.yaml
apiVersion: example.io/v1alpha1
kind: MyResource
metadata:
  name: my-resource-no-uid
  namespace: default
