test/cli/test-generating-policy/missing-metadata-uid/resource-with-uid.yaml
apiVersion: example.io/v1alpha1
kind: MyResource
metadata:
  name: my-resource-with-uid
  namespace: default
  uid: "aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee"
