test/cli/test-generating-policy/missing-metadata-uid/clusterresources.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: ClusterResource
metadata:
  name: clusterresources
spec:
  crds:
    - crds/myresource-crd.yaml
  resources:
    - apiVersion: v1
      kind: Namespace
      metadata:
        name: default
