test/cli/test-generating-policy/missing-metadata-uid/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
clusterResources:
- clusterresources.yaml
kind: Test
metadata:
  name: missing-metadata-uid
policies:
- policy.yaml
resources:
- resource-no-uid.yaml
- resource-with-uid.yaml
results:
- isGeneratingPolicy: true
  kind: MyResource
  policy: example
  resources:
  - default/my-resource-no-uid
  result: error
- generatedResource: generated/configmap.yaml
  isGeneratingPolicy: true
  kind: MyResource
  policy: example
  resources:
  - default/my-resource-with-uid
  result: pass
